Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/01/16:
- TestEngine: Fixes crash when running an ImGui instanced compiled with IMGUI_ENABLE_TEST_ENGINE
  but before a test engine has been attached to the ImGuiContext.

2024/01/15:
- TestEngine: Fixes for GetKeyChordName() api changes.

2024/01/09:
- TestEngine: Added ImGuiTestContext::KeySetEx() to manipulate keys with precise timings.
  (most other functions add yields to accomodate for common use cases).
- app_minimal: Added a building batch file to provide an alternative building reference.
- app_minimal: Removed misleading optional dependency on implot.
- app_minimal, imgui_app: Fixed building in MBCS (non-Unicode) mode.

2024/01/08:
- TestEngine: Avoid allocations in IM_CHECK_XX macros.

2023/12/05:
- TestEngine: Made it possible to use ctx->RunChildTest() along with ctx->Finish(ImGuiTestStatus_Unknown)
  to setup test dependencies without marking dependent tests as errored when the dependance is errored.

2023/11/30:
- TestEngine: Added ImGuiTestContext::RunChildTest() [Experimental].
- TestEngine: Added ImGuiTestRunFlags_ShareVars and ImGuiTestRunFlags_ShareTestContext for RunChildTest().
- TestEngine: Refactor ImGuiTest to isolate output (test status, log, start/end times) into
  a dedicated ImguiTestOutput structure. 'test->Status' and 'test->TestLog' respectively
  become 'test->Output.Status' and 'test->Output.Log'.

2023/11/15:
- TestEngine: UI: display failed counter in colored button while running (since tooltip is
  likely not accessible while running tests).

2023/11/14:
- TestEngine: Update for BeginChild() internal naming changes in IMGUI_VERSION_NUM >= 18999.

2023/10/20:
- TestEngine: Support for BeginChild() internal naming changes in IMGUI_VERSION_NUM >= 18996.

2023/10/05: